--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     width:100%;
+    background: #666666;
 }
 .button {
   border: 2px solid #fff;
@@ -9,11 +10,10 @@ body{
   width: 170px;
   text-align: center;
   position: relative;
-  margin-left:8%;
+  margin-left:10%;
+  margin-top:1%;
   background: #b1ffaa;
-}
-.button:hover{
-    
+  transition: 1s;
 }
 .group 			  { 
   position:relative; 
@@ -33,6 +33,8 @@ input 				{
   border:none;
   border-bottom:1px solid #757575;
   text-align: center;
+  background: transparent;
+  color: white;
 }
 input:focus 		{ outline:none; }
 label 				 {
@@ -119,15 +121,16 @@ table tr {
   border: 1px solid #ddd;
   padding: .35em;
 }
-table th{
-    background-color: #f3fff2;
-}
+
 table th,
 table td {
   padding: .625em;
   text-align: center;
+  background-color: #f3fff2;
 }
-
+table th{
+    background-color: #42f4bf;
+}
 table th {
   font-size: .85em;
   letter-spacing: .1em;
@@ -181,4 +184,7 @@ table th {
   table td:last-child {
     border-bottom: 0;
   }
+}
+.button:hover{
+    background: #42f4bf;
 }
